# gphotos_takeout_toolkit

./: .gitignore  README.md  google_photos_sorter.py  metadata_restorer.py  pyproject.toml
gphotos_takeout_toolkit/: __init__.py  cli.py  core.py  sorter.py
