[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gphotos_takeout_toolkit"
version = "0.4.1"
description = "A library that sorts Google Takeout Photos by their creation date with metadata preserved."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Davyd"}]
keywords = ["google-photos", "takeout", "exif", "cli"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]
requires-python = ">=3.12"
dependencies = [
    "pyexiftool>=0.5.6",
    "typer==0.25.1",
]

[project.scripts]
# Specificied the path to the CLI (Command-Line Interface) script
gphotos_takeout_toolkit = "gphotos_takeout_toolkit.cli:app"

[tool.ruff]
# Maximum allowed length of characters per row
line-length = 100

# Defines a minimum python version to be used
target-version = "py312"

[tool.mypy]
# Enables all optional safety checks, mostly type safety checks
strict = true
